--- a/source/spydersoft.Identity/Views/ApiProperties/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiProperties/Index.cshtml
@@ -1,49 +1,51 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
 @model ApiPropertiesViewModel
 
-<h2>@ViewData["Title"]</h2>
-
 <form asp-action="Save" asp-route-id="@Model.Id">
+    <div class="card">
+        <div class="card-header">
+            <h3>@ViewData["Title"]</h3>
+        </div>
+        <div class="card-body">
+            @await Html.PartialAsync("_apiNavBar", Model.NavBar)
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>@Html.LabelFor(model => model.NewItem.Key)</th>
+                        <th>@Html.LabelFor(model => model.NewItem.Value)</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
 
-    @await Html.PartialAsync("_apiNavBar", Model.NavBar)
-    <div class="table-responsive">
-        <table class="table table-bordered table-striped">
-            <thead>
+                @foreach (var apiProperty in Model.ItemsList)
+                {
+                    <tr>
+                        <td>@apiProperty.Key</td>
+                        <td>@apiProperty.Value</td>
+                        <td><a asp-action="Delete" asp-route-id="@apiProperty.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                    </tr>
+                }
                 <tr>
-                    <th>@Html.LabelFor(model => model.NewItem.Key)</th>
-                    <th>@Html.LabelFor(model => model.NewItem.Value)</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
+                    <td>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="txtClientId" asp-for="NewItem.Key" pf-validation-for="NewItem.Key" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="NewItem.Key" class="invalid-feedback"></span>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="txtClientId" asp-for="NewItem.Value" pf-validation-for="NewItem.Value" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="NewItem.Value" class="invalid-feedback"></span>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="form-group">
+                            <input type="submit" value="Add" class="btn btn-primary" />
+                        </div>
+                    </td>
 
-            @foreach (var apiProperty in Model.ItemsList)
-            {
-                <tr>
-                    <td>@apiProperty.Key</td>
-                    <td>@apiProperty.Value</td>
-                    <td><a asp-action="Delete" asp-route-id="@apiProperty.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
                 </tr>
-            }
-            <tr>
-                <td>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="txtClientId" asp-for="NewItem.Key" pf-validation-for="NewItem.Key" pf-validationerror-class="is-invalid" />
-                        <span asp-validation-for="NewItem.Key" class="invalid-feedback"></span>
-                    </div>
-                </td>
-                <td>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="txtClientId" asp-for="NewItem.Value" pf-validation-for="NewItem.Value" pf-validationerror-class="is-invalid" />
-                        <span asp-validation-for="NewItem.Value" class="invalid-feedback"></span>
-                    </div>
-                </td>
-                <td>
-                    <div class="form-group">
-                        <input type="submit" value="Add" class="btn btn-primary" />
-                    </div>
-                </td>
-
-            </tr>
-        </table>
+            </table>
+        </div>
     </div>
 </form>
