--- a/source/spydersoft.Identity/Views/Apis/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Apis/Index.cshtml
@@ -1,32 +1,30 @@
 ﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
 @model ApisViewModel
-@{
-    ViewData["Title"] = "APIs";
-}
+<div class="card">
+    <div class="card-header">
+        <h3>@ViewData["Title"]</h3>
+    </div>
+    <div class="card-body">
+        <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Name</th>
+                    <th>Display Name</th>
+                    <th>Actions&nbsp;<a asp-controller="Apis" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
+                </tr>
+            </thead>
 
-<h2>@ViewData["Title"]</h2>
-
-<div class="table-responsive">
-    <table class="table table-bordered table-striped">
-        <thead>
-            <tr>
-                <th>Name</th>
-                <th>Display Name</th>
-                <th>Actions&nbsp;<a asp-controller="Apis" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
-            </tr>
-        </thead>
-
-        @foreach (var api in Model.Apis)
-        {
-            <tr>
-                <td>@api.Name</td>
-                <td>@api.DisplayName</td>
-                <td>
-                    <a asp-controller="Apis" asp-action="Edit" asp-route-id="@api.Id"><span class="fa fa-edit"></span></a>
-                    <a asp-controller="Apis" asp-action="Delete" asp-route-id="@api.Id" title="Delete"><span class="fa fa-trash"></span></a>
-                </td>
-            </tr>
-        }
-    </table>
-    
+            @foreach (var api in Model.Apis)
+            {
+                <tr>
+                    <td>@api.Name</td>
+                    <td>@api.DisplayName</td>
+                    <td>
+                        <a asp-controller="Apis" asp-action="Edit" asp-route-id="@api.Id"><span class="fa fa-edit"></span></a>
+                        <a asp-controller="Apis" asp-action="Delete" asp-route-id="@api.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
