--- a/source/spydersoft.Identity/Views/ClientCorsOrigins/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ClientCorsOrigins/Index.cshtml
@@ -1,26 +1,28 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
 @model ClientCorsOriginsViewModel
-<h2>@ViewData["Title"]</h2>
 
 <form asp-action="Save" asp-route-id="@Model.Id">
+    <div class="card">
+        <div class="card-header">
+            <h3>@ViewData["Title"]</h3>
+        </div>
+        <div class="card-body">
+            @await Html.PartialAsync("_clientNavBar", Model.NavBar)
+            <table class="table table-striped">
+                <thead class="thead-dark">
+                    <tr>
+                        <th>@Html.LabelFor(model => model.NewItem.Origin)</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
 
-    @await Html.PartialAsync("_clientNavBar", Model.NavBar)
-    <div class="table-responsive">
-        <table class="table table-bordered table-striped">
-            <thead>
-                <tr>
-                    <th>@Html.LabelFor(model => model.NewItem.Origin)</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-
-            @foreach (var origin in Model.ItemsList)
-            {
-                <tr>
-                    <td>@origin.Origin</td>
-                    <td><a asp-action="Delete" asp-route-id="@origin.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
-                </tr>
-            }
+                @foreach (var origin in Model.ItemsList)
+                {
+                    <tr>
+                        <td>@origin.Origin</td>
+                        <td><a asp-action="Delete" asp-route-id="@origin.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                    </tr>
+                }
                 <tr>
                     <td>
                         <div class="form-group">
@@ -35,6 +37,7 @@
                     </td>
 
                 </tr>
-        </table>
+            </table>
+        </div>
     </div>
 </form>
