--- a/source/spydersoft.Identity/Views/Clients/Index.cshtml
+++ b/source/spydersoft.Identity/Views/Clients/Index.cshtml
@@ -1,29 +1,31 @@
 ﻿@using spydersoft.Identity.Models.Admin.ClientViewModels
 @model ClientsViewModel
 
-<h2>@ViewData["Title"]</h2>
-
-<div class="table-responsive">
-    <table class="table table-bordered table-striped">
-        <thead>
+<div class="card">
+    <div class="card-header">
+        <h3>@ViewData["Title"]</h3>
+    </div>
+    <div class="card-body">
+        <table class="table table-striped">
+            <thead class="thead-dark">
             <tr>
                 <th>Client Id</th>
                 <th>Client Name</th>
                 <th>Actions&nbsp;<a asp-controller="Clients" asp-action="Edit"><span class="fa fa-plus"></span></a></th>
             </tr>
-        </thead>
+            </thead>
 
-        @foreach (var client in Model.Clients)
-        {
-            <tr>
-                <td>@client.ClientId</td>
-                <td>@client.ClientName</td>
-                <td>
-                    <a asp-controller="Clients" asp-action="Edit" asp-route-id="@client.Id"><span class="fa fa-edit"></span></a>
-                    <a asp-controller="Clients" asp-action="Delete" asp-route-id="@client.Id" title="Delete"><span class="fa fa-trash"></span></a>
-                </td>
-            </tr>
-        }
-    </table>
-    
+            @foreach (var client in Model.Clients)
+            {
+                <tr>
+                    <td>@client.ClientId</td>
+                    <td>@client.ClientName</td>
+                    <td>
+                        <a asp-controller="Clients" asp-action="Edit" asp-route-id="@client.Id"><span class="fa fa-edit"></span></a>
+                        <a asp-controller="Clients" asp-action="Delete" asp-route-id="@client.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
