--- a/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
@@ -1,31 +1,33 @@
 ﻿@using spydersoft.Identity.Models.Admin.IdentityResourceViewModels
 @model IdentityResourcesViewModel
 
-<h2>@ViewData["Title"]</h2>
+<div class="card">
+    <div class="card-header">
+        <h3>@ViewData["Title"]</h3>
+    </div>
+    <div class="card-body">
+        <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th>Name</th>
+                    <th>Display Name</th>
+                    <th>Description</th>
+                    <th>Actions&nbsp;<a asp-action="Edit"><span class="fa fa-plus"></span></a></th>
+                </tr>
+            </thead>
 
-<div class="table-responsive">
-    <table class="table table-bordered table-striped">
-        <thead>
-        <tr>
-            <th>Name</th>
-            <th>Display Name</th>
-            <th>Description</th>
-            <th>Actions&nbsp;<a asp-action="Edit"><span class="fa fa-plus"></span></a></th>
-        </tr>
-        </thead>
-
-        @foreach (var identityResource in Model.IdentityResources)
-        {
-        <tr>
-            <td>@identityResource.DisplayName</td>
-            <td>@identityResource.DisplayName</td>
-            <td>@identityResource.Description</td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@identityResource.Id"><span class="fa fa-edit"></span></a>
-                <a asp-action="Delete" asp-route-id="@identityResource.Id" title="Delete"><span class="fa fa-trash"></span></a>
-            </td>
-        </tr>
-        }
-    </table>
-    
+            @foreach (var identityResource in Model.IdentityResources)
+            {
+                <tr>
+                    <td>@identityResource.DisplayName</td>
+                    <td>@identityResource.DisplayName</td>
+                    <td>@identityResource.Description</td>
+                    <td>
+                        <a asp-action="Edit" asp-route-id="@identityResource.Id"><span class="fa fa-edit"></span></a>
+                        <a asp-action="Delete" asp-route-id="@identityResource.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
 </div>
