--- a/source/spydersoft.Identity/Views/Manage/_Layout.cshtml
+++ b/source/spydersoft.Identity/Views/Manage/_Layout.cshtml
@@ -1,23 +1,22 @@
-﻿@{ 
+﻿@{
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Manage your account</h2>
-
-<div>
-    <h4>Change your account settings</h4>
-    <hr />
-    <div class="row">
-        <div class="col-md-3">
-            @await Html.PartialAsync("_ManageNav")
-        </div>
-        <div class="col-md-9">
+<div class="card">
+    <div class="card-header">
+        <h4>Manage your account</h4>
+    </div>
+    <div class="card-body">
+        @await Html.PartialAsync("_ManageNav")
+        <div class="border border-top-0 px-3 py-3">
             @RenderBody()
         </div>
+
     </div>
+</div>
 </div>
 
 @section Scripts {
     @RenderSection("Scripts", required: false)
 }
-        
+
