--- a/source/spydersoft.Identity/Views/Account/ForgotPassword.cshtml
+++ b/source/spydersoft.Identity/Views/Account/ForgotPassword.cshtml
@@ -3,23 +3,26 @@
     ViewData["Title"] = "Forgot your password?";
 }
 
-<h2>@ViewData["Title"]</h2>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="ForgotPassword" method="post">
+<div class="card">
+    <form asp-action="ForgotPassword" method="post">
+        <div class="card-header">
+            <h3>@ViewData["Title"]</h3>
+        </div>
+        <div class="card-body">
+            <p class="text-muted">Enter your email.</p>
+
             <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" class="form-control" />
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <span class="input-group-text">@@</span>
+                </div>
+                <input asp-for="Email" class="form-control" placeholder="Email" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+        </div>
+        <div class="card-footer"><button type="submit" class="btn btn-success">Submit</button></div>
+    </form>
 </div>
-
 @section Scripts {
     @await Html.PartialAsync("_ValidationScriptsPartial")
 }
