--- a/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,11 @@
 ﻿@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
-@if (SignInManager.IsSignedIn(User))
+@if (User.Identity.IsAuthenticated)
 {
     <form asp-area="" asp-controller="Account" asp-action="Logout" method="post" id="logoutForm" class="nav navbar-nav ml-auto">
-    <ul class="nav">
-       
+        <ul class="nav">
+
             <li class="nav-item dropdown">
                 <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <img gravatar-email="@UserManager.GetUserName(User)" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
@@ -15,17 +15,18 @@
                         <strong>Account</strong>
                     </div>
                     <a class="dropdown-item" asp-area="" asp-controller="Manage" asp-action="Index"><i class="fa fa-shield"></i> Manage</a>
+                    <a class="dropdown-item" asp-area="" asp-controller="Grants" asp-action="Index"><i class="fa fa-shield"></i> My Apps</a>
                     <button type="submit" class="dropdown-item"><i class="fa fa-sign-out"></i> Logout</button>
                 </div>
             </li>
-</ul>
-</form>
+        </ul>
+    </form>
 }
 else
 {
     <ul class="nav navbar-nav ml-auto">
         <li class="nav-item dropdown">
-            <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false" >
+            <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                 <img gravatar-email="@UserManager.GetUserName(User)" gravatar-size="80" alt="My Gravatar" class="img-avatar" />
             </a>
             <div class="dropdown-menu dropdown-menu-right">
