--- a/source/spydersoft.Identity/Views/Shared/_Footer.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_Footer.cshtml
@@ -1,4 +1,3 @@
 ﻿<footer class="app-footer">
-    <span><a href="http://www.mattgerega.com">Spydersoft</a> © 2019</span>
-    <span class="ml-auto">Powered by <a href="https://docs.identityserver.io/en/latest">Identity Server 4</a> &amp; <a href="http://coreui.io">CoreUI</a></span>
+    <span class="ml-auto"><a href="http://www.mattgerega.com">Spydersoft</a> © 2019</span>
 </footer>
