--- a/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
@@ -14,9 +14,9 @@
                     <div class="dropdown-header text-center">
                         <strong>Account</strong>
                     </div>
-                    <a class="dropdown-item" asp-area="" asp-controller="Manage" asp-action="Index"><i class="fa fa-shield"></i> Manage</a>
-                    <a class="dropdown-item" asp-area="" asp-controller="Grants" asp-action="Index"><i class="fa fa-shield"></i> My Apps</a>
-                    <button type="submit" class="dropdown-item"><i class="fa fa-sign-out"></i> Logout</button>
+                    <a class="dropdown-item" asp-area="" asp-controller="Manage" asp-action="Index"><i class="fa fa-user"></i> Profile</a>
+                    <a class="dropdown-item" asp-area="" asp-controller="Grants" asp-action="Index"><i class="fa fa-tablet"></i> My Apps</a>
+                    <button type="submit" class="dropdown-item"><i class="fa fa-lock"></i> Logout</button>
                 </div>
             </li>
         </ul>
@@ -34,7 +34,7 @@ else
                     <strong>Account</strong>
                 </div>
                 <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Register"><i class="fa fa-user-plus"></i>Register</a>
-                <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Login"><i class="fa fa-sign-in"></i>Login</a>
+                <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Login"><i class="fa fa-sign-in-alt"></i>Login</a>
             </div>
         </li>
     </ul>
