--- a/source/spydersoft.Identity/Views/Shared/_ValidationSummary.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_ValidationSummary.cshtml
@@ -2,6 +2,6 @@
 {
     <div class="alert alert-danger">
         <strong>Error</strong>
-        <div asp-validation-summary="All" class="danger"></div>
+        <div asp-validation-summary="All"></div>
     </div>
 }
