--- a/source/spydersoft.Identity/Views/Account/AccessDenied.cshtml
+++ b/source/spydersoft.Identity/Views/Account/AccessDenied.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Access denied";
 }
 
-<header>
-    <h2 class="text-danger">ViewData["Title"]</h2>
-    <p class="text-danger">You do not have access to this resource.</p>
-</header>
+<div class="card text-white bg-danger">
+    <div class="card-header"><h3>ViewData["Title"]</h3></div>
+    <div class="card-body">
+        <p>You do not have access to this resource.</p>
+    </div>
+</div>
