--- a/source/spydersoft.Identity/Views/Shared/Error.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/Error.cshtml
@@ -9,35 +9,31 @@
     var request_id = Model?.Error?.RequestId;
 }
 
-<div class="error-page">
-    <div class="page-header">
-        <h1>Error</h1>
+<div class="card text-white bg-danger">
+    <div class="card-header">
+        <h3>Oops.. Something went wrong</h3>
     </div>
 
-    <div class="row">
-        <div class="col-sm-6">
-            <div class="alert alert-danger">
-                Sorry, there was an error
-
-                @if (error != null)
-                {
-                    <strong>
-                        <em>
-                            : @error
-                        </em>
-                    </strong>
-
-                    if (errorDescription != null)
-                    {
-                        <div>@errorDescription</div>
-                    }
-                }
-            </div>
-
-            @if (request_id != null)
+    <div class="card-body">
+        <div class="alert alert-danger">
+            @if (error != null)
             {
-                <div class="request-id">Request Id: @request_id</div>
+                <strong>
+                    <em>
+                        @error
+                    </em>
+                </strong>
+
+                if (errorDescription != null)
+                {
+                    <div>@errorDescription</div>
+                }
             }
         </div>
+
+        @if (request_id != null)
+        {
+            <div>Request Id: @request_id</div>
+        }
     </div>
 </div>
