Add Support for adding/editing roles

--- a/source/spydersoft.Identity/Views/Account/Login.cshtml
+++ b/source/spydersoft.Identity/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Linq
+@using spydersoft.Identity.Models.Identity
 @model LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
