--- a/source/spydersoft.Identity/Views/Manage/_ManageNav.cshtml
+++ b/source/spydersoft.Identity/Views/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<ApplicationUser> SignInManager
+﻿@using spydersoft.Identity.Models.Identity
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
