--- a/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<ApplicationUser> SignInManager
+﻿@using spydersoft.Identity.Models.Identity
+@inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
 @if (User.Identity.IsAuthenticated)
