--- a/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
@@ -7,6 +7,9 @@
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Index"><i class="fa fa-mobile"></i> Clients</a></li>
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="IdentityResources" asp-action="Index"><i class="fa fa-stream"></i> Resources</a></li>
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Apis" asp-action="Index"><i class="fa fa-server"></i> APIs</a></li>
+
+            <li class="nav-title">User Admin</li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="UserRoles" asp-action="Index"><i class="fa fa-user-tag"></i> Roles</a></li>
         }
         <li class="nav-title">Spydersoft</li>
         <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact"><i class="fa fa-address-card"></i> Contact</a></li>
