--- a/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
@@ -9,6 +9,7 @@
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Apis" asp-action="Index"><i class="fa fa-server"></i> APIs</a></li>
 
             <li class="nav-title">User Admin</li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Users" asp-action="Index"><i class="fa fa-users"></i> Users</a></li>
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="UserRoles" asp-action="Index"><i class="fa fa-user-tag"></i> Roles</a></li>
         }
         <li class="nav-title">Spydersoft</li>
