Added User Claims support Changed buttons in the admin area to be small

--- a/source/spydersoft.Identity/Views/ApiScopes/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/ApiScopes/Edit.cshtml
@@ -51,7 +51,7 @@
         </div>
 
         <div class="card-footer">
-            <input type="submit" value="Save" class="btn btn-primary" formaction="Edit" />
+            <input type="submit" value="Save" class="btn btn-sm btn-primary" formaction="Edit" />
         </div>
     </form>
 </div>
@@ -95,7 +95,7 @@
                     </td>
                     <td>
                         <div class="form-group">
-                            <input type="submit" value="Add" class="btn btn-primary"/>
+                            <input type="submit" value="Add" class="btn btn-sm btn-primary"/>
                         </div>
                     </td>
 
