--- a/source/spydersoft.Identity/Views/ApiScopes/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiScopes/Index.cshtml
@@ -78,7 +78,7 @@
                     </td>
                     <td>
                         <div class="form-group">
-                            <input type="submit" value="Add" class="btn btn-primary" />
+                            <input type="submit" value="Add" class="btn btn-sm btn-primary" />
                         </div>
                     </td>
 
