--- a/source/spydersoft.Identity/Views/ApiSecrets/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiSecrets/Index.cshtml
@@ -64,7 +64,7 @@
                     </td>
                     <td>
                         <div class="form-group">
-                            <input type="submit" value="Add" class="btn btn-primary" />
+                            <input type="submit" value="Add" class="btn btn-sm btn-primary" />
                         </div>
                     </td>
 
