--- a/source/spydersoft.Identity/Views/Apis/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/Apis/Edit.cshtml
@@ -42,7 +42,7 @@
         </div>
 
         <div class="card-footer">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <input type="submit" value="Save" class="btn btn-sm btn-primary" />
         </div>
     </div>
 </form>
