--- a/source/spydersoft.Identity/Views/ClientPostLogoutRedirectUris/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ClientPostLogoutRedirectUris/Index.cshtml
@@ -33,7 +33,7 @@
                     </td>
                     <td>
                         <div class="form-group">
-                            <input type="submit" value="Add" class="btn btn-primary" />
+                            <input type="submit" value="Add" class="btn btn-sm btn-primary" />
                         </div>
                     </td>
 
