--- a/source/spydersoft.Identity/Views/Clients/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/Clients/Edit.cshtml
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="card-footer">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-sm btn-primary" />
             </div>
         </div>
     </form>
