--- a/source/spydersoft.Identity/Views/Home/About.cshtml
+++ b/source/spydersoft.Identity/Views/Home/About.cshtml
@@ -5,7 +5,7 @@
 <h2>@ViewData["Title"]</h2>
 
 <div class="row">
-    <div class="col-sm-6">
+    <div class="col-sm-6 col-md-6">
         <div class="card card-accent-info">
             <div class="card-header">
                 <strong>
@@ -22,6 +22,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div class="col-sm-6 col-md-6">
         <div class="card card-accent-info">
             <div class="card-header">
                 <strong>
