--- a/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
+++ b/source/spydersoft.Identity/Views/IdentityResources/Index.cshtml
@@ -43,7 +43,7 @@
             </div>
             <div class="form-group row">
                 <div class="col-sm-10">
-                    <input type="submit" value="Add Standard" class="btn btn-primary" />
+                    <input type="submit" value="Add Standard" class="btn btn-sm btn-primary" />
                 </div>
             </div>
         </form>
