--- a/source/spydersoft.Identity/Views/UserRoles/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/UserRoles/Edit.cshtml
@@ -11,21 +11,17 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 @Html.HiddenFor(model => model.Role.Id)
                 @Html.HiddenFor(model => model.Role.ConcurrencyStamp)
+                @Html.HiddenFor(model => model.Role.NormalizedName)
                 <div class="form-group">
                     @Html.LabelFor(model => model.Role.Name)
                     <input type="text" class="form-control" id="txtName" asp-for="Role.Name" pf-validation-for="Role.Name" pf-validationerror-class="is-invalid" />
                     <span asp-validation-for="Role.Name" class="invalid-feedback"></span>
                 </div>
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Role.NormalizedName)
-                    <input type="text" class="form-control" id="txtDisplayName" asp-for="Role.NormalizedName" pf-validation-for="Role.NormalizedName" pf-validationerror-class="is-invalid" />
-                    <span asp-validation-for="Role.NormalizedName" class="invalid-feedback"></span>
-                </div>
             </div>
         </div>
 
         <div class="card-footer">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <input type="submit" value="Save" class="btn btn-sm btn-primary" />
         </div>
     </div>
 </form>
@@ -69,7 +65,7 @@
                         </td>
                         <td>
                             <div class="form-group">
-                                <input type="submit" value="Add" class="btn btn-primary"/>
+                                <input type="submit" value="Add" class="btn btn-sm btn-primary"/>
                             </div>
                         </td>
 
