--- a/source/spydersoft.Identity/Views/Users/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/Users/Edit.cshtml
@@ -33,59 +33,113 @@
         </div>
 
         <div class="card-footer">
-            <input type="submit" value="Save" class="btn btn-primary" />
+            <input type="submit" value="Save" class="btn btn-sm btn-primary" />
         </div>
     </div>
 </form>
 
-@if (!Model.IsNewUser)
-{
-    <form asp-action="AddRole" asp-route-userid="@Model.User.Id">
-        <div class="card">
-            <div class="card-header">
-                <h3>Roles</h3>
-            </div>
-            <div class="card-body">
-                <table class="table table-striped">
-                    <thead class="thead-dark">
-                        <tr>
-                            <th>Role</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
+<div class="row">
+    @if (!Model.IsNewUser)
+    {
+        <div class="col-sm-6 col-md-6">
+            <form asp-action="AddRole" asp-route-userid="@Model.User.Id">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Roles</h3>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-striped">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Role</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
 
-                    @foreach (var role in Model.Roles)
-                    {
-                        <tr>
-                            <td>@role</td>
-                            <td><a asp-action="DeleteRole" asp-route-role="@role" asp-route-userid="@Model.User.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
-                        </tr>
-                    }
-                    <tr>
-                        <td>
-                            <div class="form-group">
-                                <label asp-for="SelectedAvailableRole" class="col-sm-4 col-form-label"></label>
-                                <div class="col-sm-6">
-                                    <select asp-for="SelectedAvailableRole" class="form-control">
-                                        @foreach (var availableRole in Model.AvailableRoles)
-                                        {
-                                            <option value="@availableRole">@availableRole</option>
-                                        }
-                                    </select>
-                                </div>
-                            </div>
-                        </td>
-                        <td>
-                            <div class="form-group">
-                                <input type="submit" value="Add" class="btn btn-primary" />
-                            </div>
-                        </td>
+                            @foreach (var role in Model.Roles)
+                            {
+                                <tr>
+                                    <td>@role</td>
+                                    <td><a asp-action="DeleteRole" asp-route-role="@role" asp-route-userid="@Model.User.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                                </tr>
+                            }
+                            <tr>
+                                <td>
+                                    <div class="form-group">
+                                        <select asp-for="SelectedAvailableRole" class="form-control">
+                                            @foreach (var availableRole in Model.AvailableRoles)
+                                            {
+                                                <option value="@availableRole">@availableRole</option>
+                                            }
+                                        </select>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        <input type="submit" value="Add" class="btn btn-sm btn-primary" />
+                                    </div>
+                                </td>
 
-                    </tr>
-                </table>
-            </div>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </form>
         </div>
-    </form>
-}
+    }
 
+    @if (!Model.IsNewUser)
+    {
+        <div class="col-sm-6 col-md-6">
+            <form asp-action="AddClaim" asp-route-userid="@Model.User.Id">
+                <div class="card">
+                    <div class="card-header">
+                        <h3>Claims</h3>
+                    </div>
+                    <div class="card-body">
+                        <table class="table table-striped">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>Type</th>
+                                    <th>Value</th>
+                                    <th>Actions</th>
+                                </tr>
+                            </thead>
+
+                            @foreach (var claim in Model.Claims)
+                            {
+                            <tr>
+                                <td>@claim.Type</td>
+                                <td>@claim.Value</td>
+                                <td><a asp-action="DeleteClaim" asp-route-claimtype="@claim.Type" asp-route-userid="@Model.User.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                            </tr>
+                            }
+                            <tr>
+                                <td>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="txtNewClaim.Type" asp-for="NewClaim.Type" pf-validation-for="NewClaim.Type" pf-validationerror-class="is-invalid"/>
+                                        <span asp-validation-for="NewClaim.Type" class="invalid-feedback"></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="txtNewClaim.Value" asp-for="NewClaim.Value" pf-validation-for="NewClaim.Value" pf-validationerror-class="is-invalid"/>
+                                        <span asp-validation-for="NewClaim.Value" class="invalid-feedback"></span>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="form-group">
+                                        <input type="submit" value="Add" class="btn btn-sm btn-primary" />
+                                    </div>
+                                </td>
+
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </form>
+        </div>
+    }
+
+</div>
 
