Fixed an issue with adding/editing scopes for APIS

--- a/source/spydersoft.Identity/Views/ApiScopes/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/ApiScopes/Edit.cshtml
@@ -11,7 +11,7 @@
             
             @Html.HiddenFor(m => m.ParentId)
             @Html.HiddenFor(m => m.Id)
-            @Html.HiddenFor(m => m.NewClaim.Type, new { value = "t"})
+            @Html.HiddenFor(m => m.NewClaim.Type, new { value = "tt"})
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
