--- a/source/spydersoft.Identity/Views/ApiResources/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/ApiResources/Edit.cshtml
@@ -1,5 +1,5 @@
-﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model ApiViewModel
+﻿@using spydersoft.Identity.Models.Admin.ApiResourceViewModels
+@model ApiResourceViewModel
 
 <form asp-action="Edit">
     <div class="card">
