--- a/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
+++ b/source/spydersoft.Identity/Views/Shared/_SidebarNav.cshtml
@@ -6,7 +6,7 @@
             <li class="nav-title">IS4 Admin</li>
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Clients" asp-action="Index"><i class="fa fa-mobile"></i> Clients</a></li>
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="IdentityResources" asp-action="Index"><i class="fa fa-stream"></i> Resources</a></li>
-            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Apis" asp-action="Index"><i class="fa fa-server"></i> APIs</a></li>
+            <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="ApiResources" asp-action="Index"><i class="fa fa-server"></i> APIs</a></li>
             <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Scopes" asp-action="Index"><i class="fa fa-server"></i> Scopes</a></li>
 
             <li class="nav-title">User Admin</li>
