--- a/source/spydersoft.Identity/Views/ApiResourceProperties/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiResourceProperties/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model ApiPropertiesViewModel
+﻿@using spydersoft.Identity.Models.Admin.ApiResourceViewModels
+@model ApiResourcePropertiesViewModel
 
 <form asp-action="Save" asp-route-id="@Model.Id">
     <div class="card">
