--- a/source/spydersoft.Identity/Views/ApiResourceScopes/Index.cshtml
+++ b/source/spydersoft.Identity/Views/ApiResourceScopes/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@using spydersoft.Identity.Models.Admin.ApiViewModels
-@model ApiClaimsViewModel
-
+﻿@using spydersoft.Identity.Models.Admin.ApiResourceViewModels
+@model ApiResourceScopesViewModel
 
 <form asp-action="Save" asp-route-id="@Model.Id">
     <div class="card">
@@ -9,27 +8,29 @@
         </div>
         <div class="card-body">
             @await Html.PartialAsync("_apiNavBar", Model.NavBar)
-
             <table class="table table-striped">
                 <thead class="thead-dark">
                     <tr>
-                        <th>@Html.LabelFor(model => model.NewItem.Type)</th>
+                        <th>@Html.LabelFor(model => model.NewItem.Scope)</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
 
-                @foreach (var apiClaim in Model.ItemsList)
+                @foreach (var scope in Model.ItemsList)
                 {
                     <tr>
-                        <td>@apiClaim.Type</td>
-                        <td><a asp-action="Delete" asp-route-id="@apiClaim.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a></td>
+                        <td>@scope.Scope</td>
+                        <td>
+                            <a asp-action="Edit" asp-route-id="@scope.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-edit"></span></a>
+                            <a asp-action="Delete" asp-route-id="@scope.Id" asp-route-parentid="@Model.NavBar.Id" title="Delete"><span class="fa fa-trash"></span></a>
+                        </td>
                     </tr>
                 }
                 <tr>
                     <td>
                         <div class="form-group">
-                            <input type="text" class="form-control" id="txtClientId" asp-for="NewItem.Type" pf-validation-for="NewItem.Type" pf-validationerror-class="is-invalid" />
-                            <span asp-validation-for="NewItem.Type" class="invalid-feedback"></span>
+                            <input type="text" class="form-control" id="txtClientId" asp-for="NewItem.Scope" pf-validation-for="NewItem.Scope" pf-validationerror-class="is-invalid" />
+                            <span asp-validation-for="NewItem.Scope" class="invalid-feedback"></span>
                         </div>
                     </td>
                     <td>
