--- a/source/spydersoft.Identity/Views/Scopes/Edit.cshtml
+++ b/source/spydersoft.Identity/Views/Scopes/Edit.cshtml
@@ -34,6 +34,12 @@
                 </div>
                 <div class="form-group">
                     <div class="form-check">
+                        <input class="form-check-input" type="checkbox" asp-for="Enabled" id="chkEnabled" />
+                        <label class="form-check-label" asp-for="Enabled"></label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
                         <input class="form-check-input" type="checkbox" asp-for="Emphasize" id="chkEmphasize" />
                         <label class="form-check-label" asp-for="Emphasize"></label>
                     </div>
